--- a/css/main.css
+++ b/css/main.css
@@ -87,6 +87,318 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
+/** General Styles **/
+html {
+  font-size: 16px;
+  background-color: #f4ede7;
+}
+
+body {
+  font-size: 1em;
+  font-family: 'Montserrat', sans-serif;
+  color: #353535;
+  text-align: center;
+}
+
+ul,
+ol {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+a {
+  color: #edd8c8;
+  font-weight: 800;
+  text-decoration: none;
+}
+
+h1 {
+  font-family: 'Playfair Display', serif;
+  font-weight: 500;
+  font-size: 1.5em;
+  margin: 0;
+}
+
+h2,
+h3,
+h4 {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 600;
+  font-size: 1.125em;
+  margin: 20px 0;
+}
+
+img {
+  width: 100%;
+}
+
+figure {
+  margin: 0;
+}
+
+.content-wrapper {
+  width: 90%;
+  margin: 10px 0 50px 0;
+}
+
+.call-to-action button {
+  font-family: 'Montserrat', sans-serif;
+  color: #353535;
+  background-color: #EDD8C8;
+  font-size: 1.5em;
+  padding: 12px 28px;
+  border-radius: 8px;
+  border: 3px solid #ffffff;
+}
+
+.call-to-action a {
+  display: grid;
+  height: 80px;
+  width: 300px;
+  background: #EDD8C8;
+  position: absolute;
+  left:
+}
+/** Base Header - Footer Styles **/
+header, footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
+}
+
+header nav {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-flow: row wrap;
+}
+
+header nav ul {
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+footer {
+  text-align: center;
+  flex-direction: column;
+}
+footer p {
+  margin: 0;
+}
+
+footer .content-wrapper {
+  width: 55%;
+  margin: 50px 0;
+}
+
+footer .social-icons {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+footer .social-icons p {
+  background-color: #edd8c8;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+footer .social-icons p i {
+  font-size: 1.3125em;
+}
+
+footer .copyright {
+  margin: 20px 0;
+}
+
+/** Mobile Styles **/
+
+header  {
+  background: url(../img/work-day-shaded.png);
+  background-size:cover;
+  background-position: center;
+  min-height: 500px;
+  display: flex;
+  justify-content: center;
+  flex-flow: row wrap;
+}
+/** wave attempt taken out temporarily **
+.container {
+  position: relative;
+  background: #2c3e50;
+  height: 50vh;
+}
+
+.wave {
+  position: absolute;
+  height: 105px;
+  width: 100%;
+  background: #2c3e50;
+  bottom: 0;
+}
+
+.wave::before, .wave::after {
+  content: "";
+  display: block;
+  position: absolute;
+  border-radius: 100% 50%;
+}
+
+.wave::before {
+  width: 55%;
+  height: 109%;
+  background-color: #fff;
+  right: -1.5%;
+  top: 60%;
+}
+.wave::after {
+  width: 55%;
+  height: 100%;
+  background-color: #2c3e50;
+  left: -1.5%;
+  top: 40%;
+}
+
+ wave attempt end **/
+
+
+.hero-area img {
+  margin: 40px 0 10px 0;
+  padding: 0
+}
+
+.hero-area h1 {
+  color: #ffffff;
+  font-weight: 400;
+}
+
+.hero-area h2 {
+  color: #ffffff;
+  font-weight: 400;
+}
+
+.hero-area img {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/** Mission Statment **/
+.mission-statement {
+  background-color: #BDD4EC;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.mission-statement .content-wrapper {
+  margin: 50px 0;
+}
+
+.mission-statement p {
+  padding: 0 15px;
+  font-weight: 400;
+}
+
+/** C2A Section **/
+.call-to-action {
+  background: url(../img/coffee-table.png);
+  background-size:cover;
+  background-position: center;
+  max-height: 300px;
+  display: flex;
+  justify-content: center;
+  align-items: row wrap;
+}
+
+.call-to-action .content-wrapper {
+  margin: 25px 0 50px 0;
+}
+
+.call-to-action img {
+  max-height: 150px;
+  margin: 0 0 25px 0;
+}
+
+.call-to-action button {
+  font-size: 1em;
+}
+
+/** Work Section **/
+.work {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.work .content-wrapper {
+  margin: 50px 0;
+}
+
+.div-one,
+.div-two,
+.div-three  {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  flex-flow: column wrap;
+  margin: 30px 20px;
+}
+
+#my-work a {
+  color: #353535;
+}
+
+.work h2 {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 1.25em;
+  margin: 0 0 50px 0;
+}
+
+.work h3 {
+  font-family: 'Playfair Display', serif;
+  font-size: 1.5em;
+  margin: 20px 0 10px 0;
+}
+
+.work p {
+  margin: 0 0 25px 0;
+  font-size: .825em;
+}
+
+
+/** About **/
+.about {
+  background: url(../img/cream-wave.png);
+  background-size:cover;
+  background-position: center;
+  min-height: 800px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-flow: column;
+}
+
+.polaroids img {
+  max-width: 300px;
+}
+
+.description p {
+  margin: 0 50px;
+}
+
+
+
 /* ==========================================================================
    Helper classes
    ========================================================================== */
@@ -175,8 +487,266 @@ textarea {
    Modify as content requires.
    ========================================================================== */
 
-@media only screen and (min-width: 35em) {
-  /* Style adjustments for viewports that meet the condition */
+@media only screen and (min-width: 768px) {
+  /* Tablet Styles */
+  /* General Styles */
+  .content-wrapper {
+    max-width: 640px;
+    margin: 50px 0 100px 0;
+  }
+
+  .logo {
+    max-width: 500px;
+  }
+
+  .copyright p {
+    font-size: 1em;
+  }
+
+  li {
+    font-size: 1.5em;
+  }
+
+  h1 {
+    font-size: 2.25em;
+    margin: 0 0 75px 0;
+  }
+
+  h2 {
+    font-size: 2em;
+  }
+
+  h3 {
+    font-size: 1.5em;
+  }
+
+  p {
+    font-size: 1.5em;
+  }
+
+/** TABLET - Mission Statement Section **/
+  .mission-statement .content-wrapper {
+    margin: 100px 0;
+  }
+/** TABLET - My Work Section **/
+  .third-width {
+    margin: 50px 20px;
+  }
+
+  .work h2 {
+    font-size: 1.5em;
+  }
+
+  .work h3 {
+    font-size: 2em;
+  }
+
+  .work p {
+    font-size: 1em;
+  }
+
+/** TABLET - about Section **/
+.about {
+  background: url(../img/cream-wave.png);
+  background-size:cover;
+  background-position: center;
+  min-height: 500px;
+}
+
+.about .content-wrapper {
+  max-width: 100%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-flow: row wrap;
+}
+
+.polaroids, .description {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
+  width: 50%;
+}
+
+.polaroids img {
+    max-width: 400px;
+  }
+
+.description img {
+  margin: 50px 0 0 0;
+  max-width: 500px;
+}
+
+.description p {
+  font-size: 1em;
+  margin: 0 35px;
+}
+/** TABLET - Footer **/
+
+footer .social-icons p {
+    background-color: #edd8c8;
+    border-radius: 50%;
+    width: 80px;
+    height: 80px;
+  }
+
+.social-icons img {
+    min-width: 50px;
+  }
+
+}
+
+
+@media only screen and (min-width: 1200px) {
+  /* Desktop Styles */
+  header {
+    padding: 15px 0;
+  }
+
+  .content-wrapper {
+    max-width: 960px;
+    margin: 25px 0 100px 0
+  }
+
+  .logo  {
+    max-width: 450px;
+  }
+
+  header nav ul {
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+  }
+
+  li {
+    font-size: 1.5em;
+  }
+
+  h1 {
+    font-size: 2.25em;
+    margin: 0 0 75px 0;
+  }
+
+  h2 {
+    font-size: 2em;
+  }
+
+  h3 {
+    font-size: 1.5em;
+  }
+
+  p {
+    font-size: 1.5em;
+  }
+
+footer .social {
+  margin: 50px 0 20px 0;
+}
+
+
+  footer h3 {
+    font-size: 1.825em;
+  }
+/** CALL 2 ACTION - Desktop **/
+.call-to-action {
+  background: url(../img/coffee-table.png);
+  background-size:cover;
+  background-position: center;
+  max-height: 400px;
+  display: flex;
+  justify-content: center;
+  align-items: row wrap;
+}
+
+.call-to-action button {
+  font-size: 1.5em;
+}
+
+.call-to-action img {
+  margin: 50px 0;
+}
+
+  /** WORK - Desktop **/
+  .work .content-wrapper {
+    max-width: 100%;
+  }
+
+.work h2 {
+  margin: 50px 0;
+}
+
+  .work-wrapper {
+    display: flex;
+    justify-content: space-around;
+    align-items: flex-start;
+    flex-flow: row wrap;
+  }
+
+  .div-one,
+  .div-two,
+  .div-three  {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: row wrap;
+    width: 30%;
+    margin: 30px 20px;
+  }
+
+  .work h2 {
+    font-size: 2em;
+  }
+
+  .work h3 {
+    font-size: 2em;
+  }
+
+  .work p {
+    font-size: 1.25em;
+  }
+
+/** ABOUT - Desktop **/
+.about {
+  background: url(../img/cream-wave.png);
+  background-size:cover;
+  background-position: center;
+  min-height: 800px;
+}
+
+.about .content-wrapper {
+  max-width: 100%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-flow: row wrap;
+}
+
+.polaroids, .description {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
+  width: 50%;
+}
+
+.polaroids img {
+    max-width: 550px;
+  }
+
+.description {
+  padding: 100px 0 0 0;
+}
+
+.description img {
+  max-width: 600px;
+}
+
+.description p {
+  font-size: 1.5em;
+}
+
 }
 
 @media print,
@@ -260,4 +830,3 @@ textarea {
     page-break-after: avoid;
   }
 }
-
